--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Special Laboratory</title>
+    <title>HAPPY BIRTHDAY RENIER!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="container">
@@ -12,9 +12,11 @@
             <div class="letter">
                 <div class="text">
                     <strong>HAPPY BIRTHDAY RENIER!</strong>
-                  <div class="image"> <img src="shongit.jpg" alt="Renier"></div>
+                    <div class="image">
+                        <img src="shongit.jpg" alt="Renier">
+                    </div>
                 </div>
-            </div>
+            </div>            
         </div>
     </div>
 </div>
